<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="@dimen/padding"
    android:paddingBottom="@dimen/padding">

    <ImageView
        android:id="@+id/team_logo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:contentDescription="@string/team_logo_description"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/team_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/team_id"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/team_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/team_name"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/league"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/league"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/team_alternate_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/team_alternate_Name"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/team_stadium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/team_stadium"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/team_stadium_img"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:contentDescription="@string/team_stadium_description"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/team_stadium_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/team_stadium_location"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/stadium_capacity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stadium_capacity"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/team_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/team_description"
        android:textAlignment="center" />
</LinearLayout>